[package]
name = "paymaster-stress"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
envy = "0.4.2"
serde_json = "1.0.139"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.43.0"
starknet = {git = "https://github.com/florian-bellotti/starknet-rs", branch = "bugfix/hash_typed_data" }
paymaster-rpc = { path = "../../avnu_main/avnu-paymaster/crates/paymaster-rpc" }